--- a/service/pom.xml
+++ b/service/pom.xml
@@ -23,7 +23,11 @@
   </properties>
 
   <dependencies>
-  
+    <dependency>
+      <groupId>com.stream</groupId>
+      <artifactId>common_utils</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
     <dependency>
         <groupId>com.stream</groupId>
         <artifactId>service_base</artifactId>
