--- a/service/service_edu/src/main/resources/application.properties
+++ b/service/service_edu/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.url=jdbc:mysql://localhost:8306/guli?serverTimezone=GMT%2B8
 spring.datasource.username=root
 spring.datasource.password=123456
 # mybatis日志
-mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+# mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
